<resources>
    <string name="app_name">V A S A</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_new_survey">New Survey</string>
    <string name="title_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="default_p">#</string>
    <string name="default_guest_name">Name</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="txt_header_text">txt_header_text</string>
    <string name="txt_rb">txt_rb</string>
    <string name="rb_text">rb_text</string>
    <string name="txt_cb">txt_rb</string>
    <string name="cb_text">cb_text</string>
    <string name="ed_text">ed_text</string>
    <string name="cmb_text">cmb_text</string>
    <string name="date_text">date_text</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dnt">Don\'t Know</string>
    <string name="ecn">Enter Complete Name</string>
    <string name="ra">Refused to Answer</string>
    <string name="ot_someone">Someone else (specify)</string>
    <string name="ot_other">Other (specify)</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="grade_year">Grade/Year</string>
    <string name="nr">NR</string>
    <string name="A4001">A4001: What was the first or given name(s) of the deceased?</string>
    <string name="A4002">A4002: What was her/his marital status?</string>
    <string name="A4003">A4003: Did s/he ever attend school?</string>
    <string name="A4004">A4004: What is the highest level of school she/he attended: primary, secondary, or higher?</string>
    <string name="A4005">A4005: What is the highest GRADE/YEAR s/he completed (at that level)?</string>
    <string name="A4006">A4006: Was s/he able to read and write?</string>
    <string name="A4007">A4007: What was her/his economic activity status in the year prior to death?</string>
    <string name="A4007_1">A4007_1: What was her/his occupation, that is, what kind of work did s/he mainly do?</string>
    <string name="A4008">A4008: Did (NAME) drink alcohol?</string>
    <string name="A4009a">A4009a: Did s/he use tobacco?</string>
    <string name="A4010">A4010: What kind of tobacco did s/he use?</string>
    <string name="A4011">A4011: How many cigarettes did s/he smoke daily?</string>
    <string name="A4012">A4012: How many times did (s)he use tobacco products each day?</string>
    <string name="A4013u">A4013_Units: For how long was (s)he ill before death?</string>
    <string name="A4014">A4014: Did (s)he die suddenly?</string>
    <string name="A4051">A4051: During the illness that led to death, did (NAME) have a fever?</string>
    <string name="A4052_u">A4052_Units: How long did the fever last?</string>
    <string name="A4053">A4053: Did the fever continue until death?</string>
    <string name="A4054">A4054: How severe was the fever?</string>
    <string name="A4055">A4055: What was the pattern of the fever?</string>
    <string name="A4056">A4056: Did the deceased have night sweats?</string>
    <string name="A4057">A4057: Did s/he drink a lot more water than usual?</string>
    <string name="A4058">A4058: During the illness that led to death, did (NAME) have more frequent loose or liquid stools than usual?</string>
    <string name="A4059_u">A4059_Units: How long did the frequent loose or liquid stools last?</string>
    <string name="A4060">A4060: At any time during the fatal illness was there blood in the liquid stools?</string>
    <string name="A4061">A4061: Was there blood in the stools up until death?</string>
    <string name="A4062">A4062: During the illness that led to death, did the deceased vomit?</string>
    <string name="A4063">A4063: Did s/he vomit in the week preceding death?</string>
    <string name="A4064_u">A4064_Units: How long before death did she vomit?</string>
    <string name="A4064_1">A4064_1: Was there blood in the vomit?</string>
    <string name="A4065">A4065: Was the vomit black?</string>
    <string name="A4066">A4066: Did s/he have any belly (abdominal) problems?</string>
    <string name="A4067">A4067: Did s/he have belly (abdominal) pain?</string>
    <string name="A4068">A4068: Was the belly (abdominal) pain severe?</string>
    <string name="A4069_u">A4069_Units: For how long did s/he have belly (abdominal) pain?</string>
    <string name="A4070">A4070: Was the pain in the upper or lower belly (abdomen)?</string>
    <string name="A4071">A4071: Did s/he have a more than usually protruding belly (abdomen)?</string>
    <string name="A4072_u">A4072_Units: For how long before death did s/he have a more than usually protruding belly (abdomen)?</string>
    <string name="A4073">A4073: How rapidly did s/he develop the protruding abdomen?</string>
    <string name="A4074">A4074: Did s/he have a mass in the abdomen?</string>
    <string name="A4075_u">A4075_Units: For how long did s/he have a mass in the belly (abdomen)?</string>
    <string name="A4076">A4076: During the illness that led to death, did the deceased have a cough?</string>
    <string name="A4077_u">A4077_Units: For how long did s/he have a cough?</string>
    <string name="A4078">"A4078: Was the cough productive, with sputum?</string>
    <string name="A4079">"A4079: Was the cough very severe?</string>
    <string name="A4080">"A4080: Did s/he cough up blood?</string>
    <string name="A4081">"A4081: During the illness that led to death, did (NAME) have difficulty breathing?</string>
    <string name="A4082_u">A4082_Units: For how long did the difficulty breathing last?</string>
    <string name="A4083">A4083: Was the difficulty breathing continuous or on and off?</string>
    <string name="A4084">A4084: During the illness that led to death, did (NAME) have fast breathing?</string>
    <string name="A4085_u">A4085_Units: How long did the fast breathing last?</string>
    <string name="A4086">A4086: During the illness that led to death, did the s/he have breathlessness?</string>
    <string name="A4087_u">A4087_Units: How long did s/he have breathlessness?</string>
    <string name="A4088">A4088: Was s/he unable to carry out daily routines due to breathlessness?</string>
    <string name="A4089">A4089: Was she breathless while lying flat?</string>
    <string name="A4090">A4090: During the illness that led to death did (s)he have wheezing?</string>
    <string name="A4091">A4091: Did s/he have chest pain?</string>
    <string name="A4092">A4092: Was the chest pain severe?</string>
    <string name="A4093">A4093: How many days before death did s/he have chest pain?</string>
    <string name="A4094_u">A4094_Units: How long did the chest pain last?</string>
    <string name="A4095">A4095: Did (NAME) have a severe headache?</string>
    <string name="A4096">A4096: Did (NAME) have a stiff neck during the illness that led to death?</string>
    <string name="A4097_u">A4097_Units: How long before death did s/he have a stiff neck?</string>
    <string name="A4098">A4098: Did (NAME) have a painful neck during the illness that led to death?</string>
    <string name="A4099_u">A4099_Units: How long before death did s/he have a painful neck?</string>
    <string name="A4100">A4100: Did s/he have mental confusion?</string>
    <string name="A4101_u">A4101_Units: How long did s/he have mental confusion?</string>
    <string name="A4102">A4102: Was (NAME) unconscious during the illness that led to death?</string>
    <string name="A4103">A4103: Was s/he unconsciousness for more than 24 hours before death?</string>
    <string name="A4104">A4104: Did the unconsciousness start suddenly, quickly (at most within a single day)?</string>
    <string name="A4105">A4105: Did the unconsciousness continue until death?</string>
    <string name="A4106">A4106: During the illness that led to death, did (NAME) have convulsions?</string>
    <string name="A4107">A4107: For how many minutes did the convulsions last?</string>
    <string name="A4108">A4108: Did s/he become unconscious immediately after the convulsion?</string>
    <string name="A4109">A4109: Did the deceased have any urine problems?</string>
    <string name="A4110">A4110: During the fatal illness, did s/he ever pass blood in the urine?</string>
    <string name="A4111">A4111: Did s/he stop urinating?</string>
    <string name="A4112">A4112: During s/he go to urinate more often than usual?</string>
    <string name="A4113">A4113: Did she have sores or ulcers anywhere on the body?</string>
    <string name="A4114">A4114: Did the sores or ulcers have pus?</string>
    <string name="A4115">A4115: Did s/he have an ulcer (pit) on the foot?</string>
    <string name="A4116">A4116: Did the ulcer on the foot ooze pus?</string>
    <string name="A4117_u">A4117_Units: How long did the ulcer on the foot ooze pus?</string>
    <string name="A4118">A4118: During the illness that led to death, did (NAME) have any skin rash?</string>
    <string name="A4119">A4119: Where was the rash?</string>
    <string name="A4120">A4120: Where did the rash start?</string>
    <string name="A4121">A4121: How many days did the rash last?</string>
    <string name="A4122">A4122: Did s/he have a measles rash (use local term)?</string>
    <string name="A4123">A4123: Did s/he ever have shingles or herpes zoster?</string>
    <string name="A4124">A4124: Did s/he have noticeable weight loss? [hint: limbs (legs, arms) become very thin]</string>
    <string name="A4125">A4125: Was s/he severely thin or wasted?</string>
    <string name="A4126">A4126: During the illness that led to death, did (NAME) have swollen legs or feet?</string>
    <string name="A4127_u">A4127_Units: How long did the swelling last?</string>
    <string name="A4128">A4128: Did s/he have both feet swollen?</string>
    <string name="A4129">A4129: Did s/he have puffiness of the face?</string>
    <string name="A4130_u">A4130_Units: How long did s/he have puffiness of the face?</string>
    <string name="A4131">A4131: Did s/he have general puffiness all over her/his body</string>
    <string name="A4132">A4132: During the illness that led to death, did (NAME)’s skin flake off in patches?</string>
    <string name="A4351">A4351: Was a death certificate issued?</string>
    <string name="A4352">A4352: Can I see the death certificate?</string>
    <string name="A4353">A4353: Record the immediate cause of death from the death certificate</string>
    <string name="A4354">A4354: Duration (1a)</string>
    <string name="A4355">A4355: Record the first underlying cause of death from the death certificate</string>
    <string name="A4356">A4356: Duration (1b)</string>
    <string name="A4357">A4357: Record the second underlying cause of death from the death certificate</string>
    <string name="A4358">A4358: Duration (1c)</string>
    <string name="A4363">A4363: Do you have a death registration certificate?</string>
    <string name="A4364">A4364: Record the death registration number</string>
    <string name="rb_A4363_1">Yes, card seen</string>
</resources>