<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan"
    android:orientation="vertical"
    tools:context=".A4351">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="60sp"
            android:layout_alignParentTop="true"
            android:src="@drawable/unwhite" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:paddingLeft="5sp"
        android:paddingTop="5sp"
        android:paddingRight="5sp"
        android:paddingBottom="5sp"
        android:scrollbarSize="10dip">


        <LinearLayout style="@style/Q_Linerlayout_v">

            <!-- Radio Buttons A4351 Starts -->
            <android.support.v7.widget.CardView
                android:id="@+id/A4351cv"
                style="@style/Q_CardView">

                <LinearLayout style="@style/Q_Linerlayout_v">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/A4351" />

                    <RadioGroup
                        android:id="@+id/A4351"
                        style="@style/RadioGroup">

                        <RadioButton
                            android:id="@+id/A4351a"
                            style="@style/RadioButton"
                            android:text="@string/yes" />

                        <RadioButton
                            android:id="@+id/A4351b"
                            style="@style/RadioButton"
                            android:text="@string/no" />

                        <RadioButton
                            android:id="@+id/A435198"
                            style="@style/RadioButton"
                            android:text="@string/dnt" />

                        <RadioButton
                            android:id="@+id/A435199"
                            style="@style/RadioButton"
                            android:text="@string/ra" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- Radio Buttons A4351 Ends -->

            <!-- Radio Buttons A4352 Starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView">

                <LinearLayout
                    android:id="@+id/cvA4352"
                    style="@style/Q_Linerlayout_v">

                    <TextView
                        android:id="@+id/A4352"
                        style="@style/TextView"
                        android:text="@string/A4352" />

                    <RadioGroup style="@style/RadioGroup">

                        <RadioButton
                            android:id="@+id/A4352_1"
                            style="@style/RadioButton"
                            android:text="@string/yes" />

                        <RadioButton
                            android:id="@+id/A4352_2"
                            style="@style/RadioButton"
                            android:text="@string/no" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- Radio Buttons A4352 Ends -->

            <!-- EditText A4353 Starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView">

                <LinearLayout
                    android:id="@+id/cvA4353"
                    style="@style/Q_Linerlayout_v">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/A4353" />

                    <EditText
                        android:id="@+id/A4353"
                        style="@style/EditText_varchar"
                        android:hint="Cause of Death" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- EditText A4353 Ends -->

            <!-- EditText A4354 Starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView">

                <LinearLayout
                    android:id="@+id/cvA4354"
                    style="@style/Q_Linerlayout_v">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/A4354" />

                    <EditText
                        android:id="@+id/A4354"
                        style="@style/EditText_varchar"
                        android:hint="Duration" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- EditText A4354 Ends -->

            <!-- EditText A4355 Starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView">

                <LinearLayout
                    android:id="@+id/cvA4355"
                    style="@style/Q_Linerlayout_v">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/A4355" />

                    <EditText
                        android:id="@+id/A4355"
                        style="@style/EditText_varchar"
                        android:hint="Duration" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- EditText A4355 Ends -->

            <!-- EditText A4356 Starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView">

                <LinearLayout
                    android:id="@+id/cvA4356"
                    style="@style/Q_Linerlayout_v">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/A4356" />

                    <EditText
                        android:id="@+id/A4356"
                        style="@style/EditText_varchar"
                        android:hint="Duration" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- EditText A4356 Ends -->

            <!-- EditText A4357 Starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView">

                <LinearLayout
                    android:id="@+id/cvA4357"
                    style="@style/Q_Linerlayout_v">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/A4357" />

                    <EditText
                        android:id="@+id/A4357"
                        style="@style/EditText_varchar"
                        android:hint="Cause of Death" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- EditText A4357 Ends -->

            <!-- EditText A4358 Starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView">

                <LinearLayout
                    android:id="@+id/cvA4358"
                    style="@style/Q_Linerlayout_v">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/A4358" />

                    <EditText
                        android:id="@+id/A4358"
                        style="@style/EditText_varchar"
                        android:hint="Duration" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- EditText A4358 Ends -->

            <!-- Radio Buttons A4363 Starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView">

                <LinearLayout
                    android:id="@+id/cvA4363"
                    style="@style/Q_Linerlayout_v">

                    <TextView
                        android:id="@+id/A4363"
                        style="@style/TextView"
                        android:text="@string/A4363" />

                    <RadioGroup style="@style/RadioGroup">

                        <RadioButton
                            android:id="@+id/A4363a"
                            style="@style/RadioButton"
                            android:text="@string/rb_A4363_1" />

                        <RadioButton
                            android:id="@+id/A4363_2"
                            style="@style/RadioButton"
                            android:text="@string/A4363_2" />

                        <RadioButton
                            android:id="@+id/A4363_3"
                            style="@style/RadioButton"
                            android:text="@string/A4363_3" />

                        <RadioButton
                            android:id="@+id/A4363_DK"
                            style="@style/RadioButton"
                            android:text="@string/dnt" />

                        <RadioButton
                            android:id="@+id/A4363_RA"
                            style="@style/RadioButton"
                            android:text="@string/ra" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- Radio Buttons A4363 Ends -->

            <!-- EditText A4364 Starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView">

                <LinearLayout
                    android:id="@+id/cvA4364"
                    style="@style/Q_Linerlayout_v">

                    <TextView
                        android:id="@+id/A4364"
                        style="@style/TextView"
                        android:text="@string/A4364" />

                    <EditText
                        android:id="@+id/A4364"
                        style="@style/EditText_varchar"
                        android:hint="Enter here" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- EditText A4364 Ends -->

            <android.support.v7.widget.CardView style="@style/Q_CardView">

                <Button
                    android:id="@+id/btn_next13"
                    style="@style/Button_collder"
                    android:layout_margin="10dp"
                    android:text="NEXT" />

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>


</LinearLayout>